Vista diagnosticar falta optimizar

--- a/app_aeronaves_light/aeronaves/templates/aeronave_update.html
+++ b/app_aeronaves_light/aeronaves/templates/aeronave_update.html
@@ -18,7 +18,7 @@
 <figure class="container">
 	<!-- Imagen -->
 	<div class="container">
-		<img src="{{aeronave.fotografia.url}} alt="" id="panel_left_imagen"
+		<img src="{{aeronave.fotografia.url}}" alt="" id="panel_left_imagen"
 		class="imagen-perfil oveflow-hidden border-black-2 margin-auto-left-right background-white"/>
 	</div>
 	<!-- Fotografia -->
