--- a/app_aeronaves_light/index/templates/base_control_panel.html
+++ b/app_aeronaves_light/index/templates/base_control_panel.html
@@ -23,8 +23,8 @@
 						<ul class="panel-menu background-red" id="panel_menu">
 							{% block panel_menu_item %}
 							<li class="background-white">
-								<a href="" class="link color-black">
-									Menu
+								<a class="link color-black">
+									
 								</a>
 							</li>
 							{% endblock panel_menu_item %}
