--- a/app_aeronaves_light/index/static/stylus/componentes.styl
+++ b/app_aeronaves_light/index/static/stylus/componentes.styl
@@ -3,16 +3,29 @@
 .textError
 	text-align center
 	font-size 1em
-
+	
+.items{
+	overflow-y auto
+    padding .5em 0
+    height 450px
+ }
+ 
+.list-averias{
+	height 320px
+	overflow-y auto
+    padding .5em 0
+ }
 .panel-dual
 	width 100%
 .card-panel
 	display flex 
 	justify-content space-between 
 	&-left 
-		width 50%
+		width 60%
 	&-right 
-		width 50%
+		width 40%
+		height 400px
+		
 .table
 	&-body
 		height 350px
