--- a/app_aeronaves_light/aeronaves/templates/aeronaves.html
+++ b/app_aeronaves_light/aeronaves/templates/aeronaves.html
@@ -27,7 +27,7 @@
 
 {% block table_column %}
 	<th class="table-head-row-column"><a href="" class="link"><input type="checkbox"> </a></th>
-	<th class="table-head-row-column"><a href="" class="link"> Nombre</a></th>
+	<th class="table-head-row-column"><a href="" class="link"> Número de Cola</a></th>
 	<th class="table-head-row-column"><a href="" class="link"> Tipo Aeronave </a></th>
 	<th class="table-head-row-column"><a href="" class="link"> Modelo </a></th>
 	<th class="table-head-row-column"><a href="" class="link"> Marca</a></th>
