Terminode proyecto de aeronaves

--- a/app_aeronaves_light/index/templates/base_control_panel.html
+++ b/app_aeronaves_light/index/templates/base_control_panel.html
@@ -16,7 +16,9 @@
 						<!-- Titulo -->
 						<div class="border-bottom-red-2">
 							<h3 class="rotulo upper-case text-center padding-normal-up-down text-shadow-black color-white">
-								Datos Generales
+								{% block h3 %} 
+									Datos Generales
+								{% endblock h3 %} 	 
 							</h3>
 						</div>
 						<!-- Menu -->
