--- a/app_aeronaves_light/ordenes_vuelos/templates/orden_vuelo_create.html
+++ b/app_aeronaves_light/ordenes_vuelos/templates/orden_vuelo_create.html
@@ -12,7 +12,9 @@
 {% block nav-border %}
 	border-bottom-red-1
 {% endblock nav-border %}
-
+{% block h3 %} 
+	Orden de Vuelo
+{% endblock h3 %} 	 
 
 {% block panel_left%}
 <figure class="container">
@@ -27,7 +29,7 @@
 			</div>
 			<!-- Input -->
 			<div class="input-panel" id="container_fotografia">
-				{{form.tripulacion}}
+				{{form.tripulacion}} 
 			</div>
 		</div>
 		<!-- Error -->
