--- a/app_aeronaves_light/pilotos/templates/piloto_detail.html
+++ b/app_aeronaves_light/pilotos/templates/piloto_detail.html
@@ -49,7 +49,7 @@
 </figure>
 {% endblock detalle_left_container %}
 {% block detalle_right_container %}
-<!-- Datos - Extras -->
+<!-- Datos - Usuario -->
 <div class="border-bottom-red-1">
   <h3 class="rotulo upper-case color-white text-shadow-black padding-normal-up-down">
     Datos Personales
@@ -58,16 +58,9 @@
 <div class="group-detalle">
   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
-        Documento identificación
+        D.N.I.
     <p class="detalle-item-value font-weight-bolder">
-      {{object.documento_identificacion}}
-    </p>
-  </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-        Número documento identificación
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.numero_documento_identificacion}}
+      {{object.dni}}
     </p>
   </div>
   <div class="detalle-item">
@@ -91,36 +84,11 @@
       {{object.estado_civil}}
     </p>
   </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-      Grupo sanguíneo
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.grupo_sanguineo}}
-    </p>
-  </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-      Hijo(s)
-    <p class="detalle-item-value font-weight-bolder">
-      {% if object.hijo == True %}
-        Si
-      {% else %}
-        No
-      {% endif %}
-    </p>
-  </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-      Número hijo(s)
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.numero_hijo}}
-    </p>
-  </div>
 </div>
 <!-- Datos Empleados -->
 <div class="border-bottom-red-1">
   <h3 class="rotulo upper-case color-white text-shadow-black padding-normal-up-down">
-    Datos Piloto
+    Datos Pilotos
   </h3>
 </div>
 <div class="group-detalle">
@@ -138,61 +106,53 @@
       {{object.tipo_piloto}}
     </p>
   </div>
-  <div class="detalle-item">
+   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
         Apelativo
     <p class="detalle-item-value font-weight-bolder">
       {{object.apelativo}}
     </p>
   </div>
+
+</div>
+
+<!-- Datos - Extras -->
+<div class="border-bottom-red-1">
+  <h3 class="rotulo upper-case color-white text-shadow-black padding-normal-up-down">
+    Domicilio 
+  </h3>
+</div>
+<div class="group-detalle">
   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
-        Grado instrucción
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.grado_instruccion}}
+      Distrito 
+    </p>
+    <p class="detalle-item-value font-weight-bolder ">
+        {{object.distrito}}
     </p>
   </div>
   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
-      Profesión
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.profesion}}
+      Zona
+    </p>
+    <p class="detalle-item-value font-weight-bolder ">
+        {{object.zona}}
     </p>
   </div>
   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
-      Ocupación
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.ocupacion}}
+      Via
+    </p>
+    <p class="detalle-item-value font-weight-bolder ">
+        {{object.via}}
     </p>
   </div>
   <div class="detalle-item">
     <p class="detalle-item-label font-weight-bolder">
-      Fecha inicio contratación
-    <p class="detalle-item-value font-weight-bolder">
-      {{object.fecha_inicio_contratacion}}
+      Dirección
     </p>
-  </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-      Fecha fin contratacion
-    <p class="detalle-item-value font-weight-bolder">
-      {% if object.fecha_fin_contratacion %}
-        {{object.fecha_fin_contratacion}}
-      {% else %}
-        -------
-      {% endif %}
-    </p>
-  </div>
-  <div class="detalle-item">
-    <p class="detalle-item-label font-weight-bolder">
-      Fecha cese
-    <p class="detalle-item-value font-weight-bolder">
-      {% if object.fecha_cese %}
-       {{object.fecha_cese}}
-      {% else %}
-        -------
-      {% endif %}
+    <p class="detalle-item-value font-weight-bolder ">
+        {{object.direccion}}
     </p>
   </div>
 </div>
@@ -209,7 +169,7 @@
       Teléfono (Personal)
     </p>
     <p class="detalle-item-value font-weight-bolder ">
-        {% if object.fecha_cese %}
+        {% if object.telefono %}
           {{object.telefono}}
         {% else %}
           -------
@@ -221,7 +181,7 @@
       Celular (Personal)
     </p>
     <p class="detalle-item-value font-weight-bolder ">
-        {% if object.fecha_cese %}
+        {% if object.celular %}
           {{object.celular}}
         {% else %}
           -------
