--- a/app_aeronaves_light/aeronaves/templates/aeronave_create.html
+++ b/app_aeronaves_light/aeronaves/templates/aeronave_create.html
@@ -203,19 +203,19 @@
 			<div class="field-panel">
 				<!-- Label -->
 				<div class="container-label-panel">
-					<label for="{{ form.nombre.auto_id }}" class="label-panel font-weight-bolder">
-					{{form.nombre.label}}
+					<label for="{{ form.numero_cola_aeronave.auto_id }}" class="label-panel font-weight-bolder">
+					{{form.numero_cola_aeronave.label}}
 					</label>
 
 				</div>
 				<!-- Input -->
 				<div class="input-panel ">
-					{{form.nombre}}
+					{{form.numero_cola_aeronave}}
 				</div>
 			</div>
 			<!-- Error -->
 			<div class="error">
-				{{form.nombre.errors}}
+				{{form.numero_cola_aeronave.errors}}
 			</div>
 		</div>
 	</div>
